z-index fix on form

--- a/styles.css
+++ b/styles.css
@@ -889,7 +889,7 @@ body:has(#hamburger-checkbox:checked) {
 
 form {
     position: relative;
-    z-index: 999;
+    z-index: 3;
     width: 100%;
     height: max-content;
     display: flex;
